Html base structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="container">gis
+        <div class="container">gisg
             <div class="logo">Header Logo</div>
             <ul class="nav">
                 <li> <a href="#">header link one</a></li>
