Change the class name "boxes" to "content"
The name of the class "boxes" was changed to "content" and improve the layout with new blocks

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Project: Landing Page</title>
 </head>
 
@@ -31,18 +32,21 @@
         </div>
     </header>
 
-    <section class="boxes">
+    <section class="content">
+        <div>
+            <h2>Some random information</h2>
+        </div>
         <div class="container">
-            <div>
-                <h2>Some random information</h2>
-            </div>
-            <div class="box">
+            <div class="boxes">
+                <div class="box"></div>
                 <p>this is some subtext under a illustration or image</p>
             </div>
-            <div class="box">
+            <div class="boxes">
+                <div class="box"></div>
                 <p>this is some subtext under a illustration or image</p>
             </div>
-            <div class="box">
+            <div class="boxes">
+                <div class="box"></div>
                 <p>this is some subtext under a illustration or image</p>
             </div>
         </div>
