Wrapped footer and "quoted" on a "container" class

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </header>
 
     <section class="content">
-        <div>
-            <h2>Some random information</h2>
-        </div>
         <div class="container">
+            <div>
+                <h2>Some random information</h2>
+            </div>
             <div class="boxes">
                 <div class="box"></div>
                 <p>this is some subtext under a illustration or image</p>
@@ -77,7 +77,9 @@
     </section>
 
     <footer>
-        <p>Copyright &copy; The Odin Project</p>
+        <div class="container">
+            <p>Copyright &copy; The Odin Project</p>
+        </div>
     </footer>
 
 </body>
