--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color
                     is lower contrast</p>
+                <button>Signup</button>
             </div>
-            <img src="" alt="this is a placeholder for a image">
+            <img src="./images/programmer-1653351_1280.png" alt="this is a placeholder for a image">
         </div>
     </header>
 
     <section class="content">
+        <div>
+            <h2>Some random information</h2>
+        </div>
         <div class="container">
-            <div>
-                <h2>Some random information</h2>
+            <div class="boxes">
+                <div class="box"></div>
+                <p>this is some subtext under a illustration or image</p>
             </div>
             <div class="boxes">
                 <div class="box"></div>
@@ -58,7 +63,7 @@
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
                     or maybe people will actually read it. Who knows? All I know is that look nice.</p>
             </div>
-            <div>
+            <div class="left">
                 <p><strong>Thor, God of Thunder</strong></p>
             </div>
         </div>
